@@ -2,6 +2,7 @@ package com.shop.ecommerce.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -19,39 +20,35 @@ public class AppConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // ✅ Replace deprecated .sessionManagement().sessionCreationPolicy()
                 .securityContext(securityContext -> securityContext.requireExplicitSave(false))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-                // ✅ Replace deprecated .csrf().disable()
                 .csrf(csrf -> csrf.disable())
 
-                // ✅ New style for CORS config
                 .cors(cors -> cors.configurationSource(request -> {
                     CorsConfiguration cfg = new CorsConfiguration();
                     cfg.setAllowedOrigins(Arrays.asList(
                             "http://localhost:3000",
                             "http://localhost:5173",
                             "http://localhost:4200",
-                            "https://ecommerce-sandy-ten.vercel.app",
-                            "https://ecommerce-backend-production-93fd.up.railway.app"
+                            "https://ecommerce-sandy-ten.vercel.app"
                     ));
                     cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
                     cfg.setAllowCredentials(true);
-                    cfg.setAllowedHeaders(List.of("*"));
+                    cfg.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
                     cfg.setExposedHeaders(List.of("Authorization"));
                     cfg.setMaxAge(3600L);
                     return cfg;
                 }))
 
-                // ✅ New style for authorization rules
                 .authorizeHttpRequests(auth -> auth
+                        // ✅ Allow OPTIONS requests for preflight
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/auth/**").permitAll()
                         .requestMatchers("/api/**").authenticated()
                         .anyRequest().permitAll()
                 )
 
-                // ✅ Custom JWT validator filter
+                // your JWT filter
                 .addFilterBefore(new JwtValidator(), BasicAuthenticationFilter.class);
 
         return http.build();
